Added last component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,6 @@
     "editor.insertSpaces": false,
     "editor.tabSize": 2,
     "editor.formatOnSave": true,
-    "eslint.packageManager": "yarn",
     "eslint.autoFixOnSave": true,
     "prettier.singleQuote": true,
     "prettier.printWidth": 100,
@@ -17,5 +16,8 @@
     "prettier.tabWidth": 2,
     "prettier.eslintIntegration": true,
     "prettier.stylelintIntegration": true
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
   }
 }
